@@ -1,0 +1,42 @@
+<?xml version="1.0"?>
+<svg xmlns="http://www.w3.org/2000/svg" version="1.2" streamable="true">
+  <g id="pages">
+    <g>
+      <rect x="0mm" y="0mm" width="210mm" height="297mm" style="fill: #ffffff; stroke: #000000; stroke-width: 1px; fill-opacity: 1; stroke-opacity: 1;"/>
+      <text x="16.0000mm" y="29.2333mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">This</text>
+      <text x="25.1017mm" y="29.2333mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">is</text>
+      <text x="30.5627mm" y="29.2333mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">one</text>
+      <text x="37.8440mm" y="29.2333mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">single</text>
+      <text x="50.5863mm" y="29.2333mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">paragraph,</text>
+      <text x="70.6100mm" y="29.2333mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">which</text>
+      <text x="81.5320mm" y="29.2333mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">should</text>
+      <text x="94.2743mm" y="29.2333mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">be</text>
+      <text x="99.7353mm" y="29.2333mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">wrapped,</text>
+      <text x="116.1183mm" y="29.2333mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">due</text>
+      <text x="123.3997mm" y="29.2333mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">to</text>
+      <text x="128.8607mm" y="29.2333mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">its</text>
+      <text x="136.1420mm" y="29.2333mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">length</text>
+      <text x="148.8843mm" y="29.2333mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">exceeding</text>
+      <text x="167.0877mm" y="29.2333mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">a</text>
+      <text x="170.7283mm" y="29.2333mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">single</text>
+      <text x="183.4707mm" y="29.2333mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">page.</text>
+      <text x="16.0000mm" y="35.1600mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">To</text>
+      <text x="21.4610mm" y="35.1600mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">exceed</text>
+      <text x="34.2033mm" y="35.1600mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">the</text>
+      <text x="41.4847mm" y="35.1600mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">space</text>
+      <text x="52.4067mm" y="35.1600mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">with</text>
+      <text x="61.5083mm" y="35.1600mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">this</text>
+      <text x="70.6100mm" y="35.1600mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">short</text>
+      <text x="81.5320mm" y="35.1600mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">statement,</text>
+      <text x="101.5557mm" y="35.1600mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">the</text>
+      <text x="108.8370mm" y="35.1600mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">page</text>
+      <text x="117.9387mm" y="35.1600mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">needs</text>
+      <text x="128.8607mm" y="35.1600mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">to</text>
+      <text x="134.3217mm" y="35.1600mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">be</text>
+      <text x="139.7827mm" y="35.1600mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">kinda</text>
+      <text x="150.7047mm" y="35.1600mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">small,</text>
+      <text x="163.4470mm" y="35.1600mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">of</text>
+      <text x="168.9080mm" y="35.1600mm" style="font-size: 12.00pt; font-family: my-font (font); font-style: normal; font-weight: normal; stroke: none; fill: #2e3436">course.</text>
+    </g>
+  </g>
+</svg>
